update swagger routes
