# controllers/userController.js
@@ -4,6 +4,7 @@ const bcrypt = require('bcrypt');
 const ObjectId = require('mongodb').ObjectId;
 
 const getAllUsers = async (req, res) => {
+    //#swagger.tags=['Users']
     try {
         const result = await mongodb.getDatabase().db('project2').collection('users').find();
         const users = await result.toArray();
@@ -15,6 +16,7 @@ const getAllUsers = async (req, res) => {
 };
 
 const getSingleUser = async (req, res) => {
+    //#swagger.tags=['Users']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return res.status(400).json({ errors: errors.array() });
@@ -36,6 +38,7 @@ const getSingleUser = async (req, res) => {
 };
 
 const createUser = async (req, res) => {
+    //#swagger.tags=['Users']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return res.status(400).json({ errors: errors.array() });
@@ -56,7 +59,49 @@ const createUser = async (req, res) => {
     }
 };
 
+const updateUser = async (req, res) => {
+    //#swagger.tags=['Users']
+    const errors = validationResult(req);
+    if (!errors.isEmpty()) {
+        return res.status(400).json({ errors: errors.array() });
+    }
+
+    try {
+        const userId = new ObjectId(req.params.id);
+        
+        // Check if user exists
+        const existingUser = await mongodb.getDatabase().db('project2').collection('users').findOne({ _id: userId });
+        if (!existingUser) {
+            return res.status(404).json({ message: 'User not found' });
+        }
+
+        const updates = {
+            name: req.body.name || existingUser.name,
+            email: req.body.email || existingUser.email,
+        };
+
+        // If the password is being updated, hash the new password
+        if (req.body.password) {
+            updates.password = await bcrypt.hash(req.body.password, 10);
+        }
+
+        const response = await mongodb.getDatabase().db('project2').collection('users').updateOne(
+            { _id: userId },
+            { $set: updates }
+        );
+
+        if (response.matchedCount === 0) {
+            return res.status(404).json({ message: 'User not found' });
+        }
+
+        res.status(200).json({ message: 'User updated successfully' });
+    } catch (error) {
+        res.status(500).json({ message: 'Some error occurred while updating the user', error: error.message });
+    }
+};
+
 const deleteUser = async (req, res) => {
+    //#swagger.tags=['Users']
     const errors = validationResult(req);
     if (!errors.isEmpty()) {
         return res.status(400).json({ errors: errors.array() });
@@ -80,5 +125,6 @@ module.exports = {
     getAllUsers,
     getSingleUser,
     createUser,
+    updateUser,
     deleteUser
 };
